--- a/templates/article.html
+++ b/templates/article.html
@@ -83,6 +83,7 @@
                                         <!--</div>-->
                                         <!-- Start info  -->
                                         <div class="blog-info">
+                                            <!--<p>{{article.content}}</p>-->
                                           <p>{% autoescape off %}{{article.content}}{% endautoescape %}</p>
                                             <!--<div class="user-info">-->
                                                 <!--&lt;!&ndash;分享&ndash;&gt;-->
